Move all experiments into HTML Experiment folder

--- a/Html/Exp 4.html
+++ b/Html/Exp 4.html
@@ -8,8 +8,8 @@
 <body>
 
   <div align="center">
-    <fieldset>
-      <legend><h2>Hotel Room Booking Form</h2></legend>
+    <section>
+      <strong><h2>Hotel Room Booking Form</h2></strong>
 
       <form>
         <label for="fullname">Full Name:</label><br>
@@ -46,7 +46,7 @@
 
       <br>
       <p>© 2023 Hotel Booking Portal</p>
-    </fieldset>
+    </section>
   </div>
 
 </body>
